--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -50,3 +50,5 @@ $color-danger: #ff4746;
 
 $color-bg-app: #141414;
 $color-bg-modal: $color-bg-4;
+
+$color-scrollbar-thumb: rgba($color-white, 0.15);
